Wed 14 Apr 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update misc files (.gitlab-ci.yml, README.md, Cargo.toml etc.)

Fri 01 Jan 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial commit